third_party/move/move-prover/tests/sources/functional/verify_custom_table.exp
Move prover returns: exiting with verification errors
error: post-condition does not hold
    ┌─ tests/sources/functional/verify_custom_table.move:269:9
    │
269 │         ensures spec_get(result.t, k1) == 23;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/verify_custom_table.move:265: add_R_fail (spec)
    =     at tests/sources/functional/verify_custom_table.move:266: add_R_fail (spec)
    =     at tests/sources/functional/verify_custom_table.move:262: add_R_fail
    =     at tests/sources/functional/verify_custom_table.move:243: make_R
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:244: make_R
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:245: make_R
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:246: make_R
    =         result = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:247: make_R
    =         result = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:263: add_R_fail
    =     at tests/sources/functional/verify_custom_table.move:267: add_R_fail (spec)
    =     at tests/sources/functional/verify_custom_table.move:268: add_R_fail (spec)
    =     at tests/sources/functional/verify_custom_table.move:269: add_R_fail (spec)

error: post-condition does not hold
   ┌─ tests/sources/functional/verify_custom_table.move:76:9
   │
76 │         ensures spec_get(result, 1) == 1;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/verify_custom_table.move:69: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_custom_table.move:70: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_custom_table.move:71: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_custom_table.move:72: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_custom_table.move:73: add_fail
   =         result = <redacted>
   =     at tests/sources/functional/verify_custom_table.move:74: add_fail
   =     at tests/sources/functional/verify_custom_table.move:76: add_fail (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/verify_custom_table.move:219:9
    │
219 │         ensures result == spec_new();
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/verify_custom_table.move:214: create_and_insert_fail1
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:215: create_and_insert_fail1
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:216: create_and_insert_fail1
    =         result = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:217: create_and_insert_fail1
    =     at tests/sources/functional/verify_custom_table.move:219: create_and_insert_fail1 (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/verify_custom_table.move:228:9
    │
228 │         ensures result == spec_set(spec_new(), 1, 2);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/verify_custom_table.move:223: create_and_insert_fail2
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:224: create_and_insert_fail2
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:225: create_and_insert_fail2
    =         result = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:226: create_and_insert_fail2
    =     at tests/sources/functional/verify_custom_table.move:228: create_and_insert_fail2 (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/verify_custom_table.move:210:9
    │
210 │         ensures result == spec_set(spec_new(), 1, 2);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/verify_custom_table.move:202: create_and_insert_fail_due_to_typed_key_encoding
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:203: create_and_insert_fail_due_to_typed_key_encoding
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:204: create_and_insert_fail_due_to_typed_key_encoding
    =         result = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:205: create_and_insert_fail_due_to_typed_key_encoding
    =     at tests/sources/functional/verify_custom_table.move:210: create_and_insert_fail_due_to_typed_key_encoding (spec)
